WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107133
[WK2] svg/dom/fuzz-path-parser.html is failing
https://bugs.webkit.org/show_bug.cgi?id=107133
Summary
[WK2] svg/dom/fuzz-path-parser.html is failing
Zan Dobersek
Reported
2013-01-17 08:59:02 PST
[WK2] svg/dom/fuzz-path-parser.html is failing
Attachments
Patch
(3.40 KB, patch)
2013-01-17 09:14 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch
(4.33 KB, patch)
2013-01-18 11:34 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-01-17 09:14:33 PST
Created
attachment 183198
[details]
Patch
Build Bot
Comment 2
2013-01-17 10:33:30 PST
Comment on
attachment 183198
[details]
Patch
Attachment 183198
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/15938181
New failing tests: http/tests/security/contentSecurityPolicy/source-list-parsing-nonascii.html fast/frames/sandboxed-iframe-attribute-parsing-03.html http/tests/websocket/tests/hybi/long-invalid-header.html
Zan Dobersek
Comment 3
2013-01-17 11:07:30 PST
Comment on
attachment 183198
[details]
Patch EWS disagrees, the patch is wrong.
Zan Dobersek
Comment 4
2013-01-18 11:34:57 PST
Created
attachment 183519
[details]
Patch
Alexey Proskuryakov
Comment 5
2013-01-18 11:51:51 PST
Comment on
attachment 183519
[details]
Patch Seems to make sense. Did you check why this is not an issue in DumpRenderTree?
Zan Dobersek
Comment 6
2013-01-19 13:00:36 PST
(In reply to
comment #5
)
> (From update of
attachment 183519
[details]
) > Seems to make sense. Did you check why this is not an issue in DumpRenderTree?
Implementations in DRT print out the console message through printf. String arguments to that method are printed only up to the first null character, so printf("a: %s\n", "b\0c") would print out "a: b\n".
WebKit Review Bot
Comment 7
2013-01-19 13:12:58 PST
Comment on
attachment 183519
[details]
Patch Clearing flags on attachment: 183519 Committed
r140258
: <
http://trac.webkit.org/changeset/140258
>
WebKit Review Bot
Comment 8
2013-01-19 13:13:02 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 9
2013-01-19 15:01:39 PST
It broke the build on Qt-WK2 because of the following warning: /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp: In member function ‘void WTR::InjectedBundlePage::willAddMessageToConsole(WKStringRef, uint32_t)’: /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:1434:29: error: comparison is always true due to limited range of data type [-Werror=type-limits] cc1plus: all warnings being treated as errors
Zan Dobersek
Comment 10
2013-01-19 23:19:12 PST
(In reply to
comment #9
)
> It broke the build on Qt-WK2 because of the following warning: > ...
Sorry for the breakage, fixed in
r140268
.
http://trac.webkit.org/changeset/140268
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug