[WK2] svg/dom/fuzz-path-parser.html is failing https://bugs.webkit.org/show_bug.cgi?id=107133

Patch by Zan Dobersek <zdobersek@igalia.com> on 2013-01-19
Reviewed by Alexey Proskuryakov.

Tools:

Console messages can contain null characters before the end of string.
Appending such message to the StringBuilder as a WTFString appends the
complete string, including the null character. This later cuts off everything
after the null character when the string is being printed out to the test
output.

To avoid this, truncate the string up to the first null character. This
preserves the newline character appended immediately after this and
stops giving incorrect output.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::willAddMessageToConsole):

LayoutTests:

Unskip the now-passing test.

* platform/gtk-wk2/TestExpectations:
* platform/wk2/TestExpectations:

Canonical link: https://commits.webkit.org/125612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140258 268f45cc-cd09-0410-ab3c-d52691b4dbfc